# tabletrace-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  REFACTORING_PLAN.md  eslint.config.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
demo/: docker-compose.yml
demo/init/: 01-schema.sql  02-seed.sql
src/: App.tsx  config.ts  index-copy.css  index.css  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs  schema.rs  supabase.rs  types.rs  watching.rs
src-tauri/src/db/: config.rs  mod.rs  postgres.rs  schema.rs  supabase.rs  watcher.rs
src-tauri/src/services/: connection.rs  mod.rs  schema.rs  supabase.rs  watching.rs
src-tauri/src/shared/: dto.rs  mod.rs  types.rs
src/components/: AppSidebar.tsx  ConnectionErrorBanner.tsx  StatusBar.tsx  UpdateChecker.tsx  index.ts
src/components/AppHeader/: AppHeader.tsx  AppTitle.tsx  ConnectionButton.tsx  ConnectionStatus.tsx  LayoutMenu.tsx  SettingsButton.tsx
src/components/ConnectionDialog/: connectionStorage.ts  defaults.ts  index.tsx  schema.ts  types.ts
src/components/ui/: index.ts  (+3 more)
src/hooks/: useDryRun.ts  useEventLog.ts
src/lib/: correlation.ts  index.ts  tauri.ts
src/logic/: correlation.ts  diff.ts  formatters.ts  index.ts  tableFilters.ts  tableHighlights.ts  tableKeys.ts
src/stores/: connectionStore.ts  index.ts  uiStore.ts
src/types/: index.ts
src/utils/: diff.ts  formatters.ts  index.ts  settings.ts  theme.ts
(+71 files in other folders)
